Task-56970: Fix snackbar position z-index

--- a/platform-ui-skin/src/main/webapp/skin/less/vuetify/vuetify-all.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/vuetify/vuetify-all.less
@@ -542,5 +542,9 @@ Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
       max-height: 100vh;
       margin: 0;
     }
+
+    .v-snack {
+      z-index: @zindexModalBackdrop!important;
+    }
   }
 }
